calc/calc.output
Terminals unused in grammar

    CONST_PI
    CONST_E
    GEQ
    LEQ
    NEQ
    AND
    OR
    NOT
    '>'
    '<'
    '^'


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt
    3          | stmt_list stmt

    4 stmt: expr ';'
    5     | IDENTIFIER ASSIGN expr ';'

    6 expr: expr '+' expr
    7     | expr '-' expr
    8     | expr '*' expr
    9     | expr '/' expr
   10     | expr '%' expr
   11     | '-' expr
   12     | '(' expr ')'
   13     | INTEGER
   14     | REAL
   15     | STRING
   16     | BOOLEAN
   17     | IDENTIFIER
   18     | TRIG_FUNC '(' expr ')'
   19     | STR_FUNC '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 10
    '(' (40) 12 18 19
    ')' (41) 12 18 19
    '*' (42) 8
    '+' (43) 6
    '-' (45) 7 11
    '/' (47) 9
    ';' (59) 4 5
    '<' (60)
    '>' (62)
    '^' (94)
    error (256)
    INTEGER (258) 13
    REAL (259) 14
    STRING (260) 15
    BOOLEAN (261) 16
    IDENTIFIER (262) 5 17
    TRIG_FUNC (263) 18
    STR_FUNC (264) 19
    CONST_PI (265)
    CONST_E (266)
    ASSIGN (267) 5
    GEQ (268)
    LEQ (269)
    NEQ (270)
    AND (271)
    OR (272)
    NOT (273)


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    program (31)
        on left: 1
        on right: 0
    stmt_list (32)
        on left: 2 3
        on right: 1 3
    stmt (33)
        on left: 4 5
        on right: 2 3
    expr (34)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 4 5 6 7 8 9 10 11 12 18 19


State 0

    0 $accept: • program $end

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    program    go to state 10
    stmt_list  go to state 11
    stmt       go to state 12
    expr       go to state 13


State 1

   13 expr: INTEGER •

    $default  reduce using rule 13 (expr)


State 2

   14 expr: REAL •

    $default  reduce using rule 14 (expr)


State 3

   15 expr: STRING •

    $default  reduce using rule 15 (expr)


State 4

   16 expr: BOOLEAN •

    $default  reduce using rule 16 (expr)


State 5

    5 stmt: IDENTIFIER • ASSIGN expr ';'
   17 expr: IDENTIFIER •

    ASSIGN  shift, and go to state 14

    $default  reduce using rule 17 (expr)


State 6

   18 expr: TRIG_FUNC • '(' expr ')'

    '('  shift, and go to state 15


State 7

   19 expr: STR_FUNC • '(' expr ')'

    '('  shift, and go to state 16


State 8

   11 expr: '-' • expr

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 17
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    expr  go to state 18


State 9

   12 expr: '(' • expr ')'

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 17
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    expr  go to state 19


State 10

    0 $accept: program • $end

    $end  shift, and go to state 20


State 11

    1 program: stmt_list •
    3 stmt_list: stmt_list • stmt

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    $default  reduce using rule 1 (program)

    stmt  go to state 21
    expr  go to state 13


State 12

    2 stmt_list: stmt •

    $default  reduce using rule 2 (stmt_list)


State 13

    4 stmt: expr • ';'
    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   10     | expr • '%' expr

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26
    ';'  shift, and go to state 27


State 14

    5 stmt: IDENTIFIER ASSIGN • expr ';'

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 17
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    expr  go to state 28


State 15

   18 expr: TRIG_FUNC '(' • expr ')'

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 17
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    expr  go to state 29


State 16

   19 expr: STR_FUNC '(' • expr ')'

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 17
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    expr  go to state 30


State 17

   17 expr: IDENTIFIER •

    $default  reduce using rule 17 (expr)


State 18

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   10     | expr • '%' expr
   11     | '-' expr •

    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26

    $default  reduce using rule 11 (expr)


State 19

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   10     | expr • '%' expr
   12     | '(' expr • ')'

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26
    ')'  shift, and go to state 31


State 20

    0 $accept: program $end •

    $default  accept


State 21

    3 stmt_list: stmt_list stmt •

    $default  reduce using rule 3 (stmt_list)


State 22

    6 expr: expr '+' • expr

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 17
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    expr  go to state 32


State 23

    7 expr: expr '-' • expr

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 17
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    expr  go to state 33


State 24

    8 expr: expr '*' • expr

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 17
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    expr  go to state 34


State 25

    9 expr: expr '/' • expr

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 17
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    expr  go to state 35


State 26

   10 expr: expr '%' • expr

    INTEGER     shift, and go to state 1
    REAL        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IDENTIFIER  shift, and go to state 17
    TRIG_FUNC   shift, and go to state 6
    STR_FUNC    shift, and go to state 7
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    expr  go to state 36


State 27

    4 stmt: expr ';' •

    $default  reduce using rule 4 (stmt)


State 28

    5 stmt: IDENTIFIER ASSIGN expr • ';'
    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   10     | expr • '%' expr

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26
    ';'  shift, and go to state 37


State 29

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   10     | expr • '%' expr
   18     | TRIG_FUNC '(' expr • ')'

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26
    ')'  shift, and go to state 38


State 30

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   10     | expr • '%' expr
   19     | STR_FUNC '(' expr • ')'

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26
    ')'  shift, and go to state 39


State 31

   12 expr: '(' expr ')' •

    $default  reduce using rule 12 (expr)


State 32

    6 expr: expr • '+' expr
    6     | expr '+' expr •
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   10     | expr • '%' expr

    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26

    $default  reduce using rule 6 (expr)


State 33

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    7     | expr '-' expr •
    8     | expr • '*' expr
    9     | expr • '/' expr
   10     | expr • '%' expr

    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26

    $default  reduce using rule 7 (expr)


State 34

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    8     | expr '*' expr •
    9     | expr • '/' expr
   10     | expr • '%' expr

    $default  reduce using rule 8 (expr)


State 35

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
    9     | expr '/' expr •
   10     | expr • '%' expr

    $default  reduce using rule 9 (expr)


State 36

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   10     | expr • '%' expr
   10     | expr '%' expr •

    $default  reduce using rule 10 (expr)


State 37

    5 stmt: IDENTIFIER ASSIGN expr ';' •

    $default  reduce using rule 5 (stmt)


State 38

   18 expr: TRIG_FUNC '(' expr ')' •

    $default  reduce using rule 18 (expr)


State 39

   19 expr: STR_FUNC '(' expr ')' •

    $default  reduce using rule 19 (expr)
